iris_worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iriswebapp-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iriswebapp-worker
  template:
    metadata:
      labels:
        app: iriswebapp-worker
    spec:
      securityContext: {}
      containers:
        - name: iriswebapp-worker
          securityContext: {}
          resources: {}
          image: ahemida96/iriswebapp_app
          imagePullPolicy: "IfNotPresent"
          command: ['./wait-for-iriswebapp.sh', "iriswebapp-app:8000", './iris-entrypoint.sh', 'iris-worker']

          volumeMounts:
            - mountPath: /home/iris/downloads
              name: iris-downloads
            - mountPath: /home/iris/user_templates
              name: user-templates
            - mountPath: /home/iris/server_data
              name: server-data
            - mountPath: /etc/irisRootCACert.pem
              name: iris-root-ca-cert
              subPath: irisRootCACert.pem
              readOnly: true
            - mountPath: /home/iris/certificates/rootCA
              name: iris-certs-dir-rootca
              readOnly: true
            - mountPath: /home/iris/certificates/web_certificates
              name: iris-certs-dir-webcerts
              readOnly: true
            - mountPath: /iriswebapp/certificates/ldap/
              name: iris-ldap-certs
              readOnly: true
      volumes:
        - name: iris-downloads
          emptyDir: {}  
        - name: user-templates
          emptyDir: {}
        - name: server-data 
          emptyDir: {}
        - name: iris-root-ca-cert
          secret:
            secretName: iris-root-ca-cert-secret-worker
        - name: iris-certs-dir-rootca
          secret:
            secretName: iris-certs-dir-rootca-secrets-worker
        - name: iris-ldap-certs
          secret:
            secretName: iris-ldap-certs-secret-worker
        - name: iris-certs-dir-webcerts
          secret:
            secretName: iris-certs-dir-webcerts-secrets-worker
---
