iris_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iriswebapp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iriswebapp-app
  template:
    metadata:
      labels:
        app: iriswebapp-app
    spec:
      securityContext: {}
      containers:
        - name: iriswebapp-app
          securityContext: {}
          resources: {}
          image: ahemida96/iriswebapp_app
          imagePullPolicy: "IfNotPresent"
          command: ['nohup', './iris-entrypoint.sh', 'iriswebapp']

          ports:
            - containerPort: 8000

          volumeMounts:
            - mountPath: /home/iris/downloads
              name: iris-downloads  
            - mountPath: /home/iris/user_templates
              name: user-templates
            - mountPath: /home/iris/server_data
              name: server-data
            - mountPath: /etc/irisRootCACert.pem
              name: iris-root-ca-cert
              subPath: irisRootCACert.pem
              readOnly: true
            - mountPath: /home/iris/certificates/rootCA
              name: iris-certs-dir-rootca
              readOnly: true
            - mountPath: /home/iris/certificates/web_certificates
              name: iris-certs-dir-webcerts
              readOnly: true
            - mountPath: /iriswebapp/certificates/ldap/
              name: iris-ldap-certs
              readOnly: true
      volumes:
        - name: iris-downloads
          emptyDir: {}
        - name: user-templates
          emptyDir: {}
        - name: server-data
          emptyDir: {}
        - name: iris-root-ca-cert
          secret:
            secretName: iris-root-ca-cert-secret-app
        - name: iris-ldap-certs
          secret:
            secretName: iris-ldap-certs-secret-app
        - name: iris-certs-dir-rootca
          secret:
            secretName: iris-certs-dir-rootca-secrets-app
        - name: iris-certs-dir-webcerts
          secret:
            secretName: iris-certs-dir-webcerts-secrets-app
---
apiVersion: v1
kind: Service
metadata:
  name: iriswebapp-app
  labels:
    app: iriswebapp-app
spec:
  type: NodePort
  ports:
   - port: 8000
     targetPort: 8000
  selector:
   app: iriswebapp-app
---
