rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app:  rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      securityContext: {}
      containers:
        - name:  rabbitmq
          image: rabbitmq:3-management-alpine
          securityContext: {}
          resources: {}
          imagePullPolicy: "IfNotPresent"
          ports:
          - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name:  rabbitmq
spec:
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
  type: ClusterIP
  selector:
    app: rabbitmq
---
