ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: iris.ahmedhemida.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: iriswebapp-app
              port:
                number: 8000
  tls:
  - hosts:
    - iris.ahmedhemida.com
    secretName: iris-ingress-tls-secret
